src/objects/Account_Plan__c.object
<CustomObject>
    <description>This object captures account plan(s) for this specific account, to include strategies, SWOT analysis, account team, etc.</description>
    <fields>
        <fullName>Account_Plan_Action__c</fullName>
        <formula>IF( 
AND( 
$User.Id = OwnerId, 
ISPICKVAL(Status__c, &quot;Draft&quot;)), 
HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot; &amp; Id &amp;
&quot;&amp;template_id=00XE0000000ICzJ&quot; &amp;
&quot;&amp;p2_lkid=&quot; &amp;  Owner:User.Manager.Contact_Record_ID__c &amp;
&quot;&amp;p5=&quot; &amp;
&quot;&amp;retURL=&quot; &amp; Id &amp;
&quot;&amp;save=1&quot; &amp;
&quot;&amp;saveURL=%2F&quot; &amp; Id &amp; &quot;%2Fe%3F%2600NE00000038fFv%3DSubmitted%26save%3D1%26saveURL%3D&quot; &amp; Id, &quot;Submit&quot;,&quot;_top&quot;),
IF( 
AND( 
$User.Id = Owner:User.ManagerId, 
ISPICKVAL(Status__c, &quot;Submitted&quot;)), 
HYPERLINK( 
&quot;/&quot; &amp; Id &amp; &quot;/e?save=1&quot; &amp; 
&quot;&amp;00NE00000038fFv=&quot; &amp; &quot;Reviewed&quot; &amp; 
&quot;&amp;retURL=%2F&quot; &amp; Id, &quot;Review&quot; , &quot;_top&quot;), 
HYPERLINK( 
&quot;/&quot; &amp; Id &amp; &quot;/e?clone=1&quot; &amp; 
&quot;&amp;00NE00000038fFv=&quot; &amp; &quot;Draft&quot; &amp; 
&quot;&amp;retURL=%2F&quot; &amp; Id &amp; 
&quot;&amp;saveURL=%2F&quot; &amp; Id &amp; &quot;%2Fe?%2600NE00000038fFv%3DArchived%26save%3D1%26saveURL%3D&quot; &amp; Account__r.Id, &quot;New Draft&quot;, &quot;_top&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Timeline__c</fullName>
        <description>The time-line set for this account plan.</description>
        <inlineHelpText>Enter the time-line for completing the objectives of this account plan.</inlineHelpText>
        <label>Account Plan Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>6 - 12 Months</fullName>
                </value>
                <value>
                    <fullName>12 - 18 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the standard Account Object page</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Process_and_Key_Milestones__c</fullName>
        <description>Buying Process and Key Milestones.</description>
        <inlineHelpText>What are the customer&apos;s buying process and key milestones?</inlineHelpText>
        <label>Buying Process and Key Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Profile__c</fullName>
        <inlineHelpText>What business are they in? How do they make money? Where are their resources invested? This is how we determine which programs will add value and have strong ROI. (SOURCES: Company website, Wikipedia, Google)</inlineHelpText>
        <label>Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Summary__c</fullName>
        <description>List and summary of competitors involved in account plan.</description>
        <inlineHelpText>List and analysis of MicroStrategy competitors relevant to this account plan.</inlineHelpText>
        <label>Competitor Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Initiatives__c</fullName>
        <inlineHelpText>This is where we begin to uncover problems.  Many can be discerned outside the company. Most require meetings. (SOURCES: 10K Reports, Yahoo Finance, Google, RainKing, Marketo, Analyst Reports, Glassdoor, G2Crowd, Customer Reference Database, SFDC, etc.)</inlineHelpText>
        <label>Initiatives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Problem_and_Pains__c</fullName>
        <description>Customer Business Problem and Pains</description>
        <inlineHelpText>Provide a summary of customer&apos;s current business initiatives, known business problems, and associated pains.</inlineHelpText>
        <label>Customer Business Problem and Pains</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Lifetime_Revenue__c</fullName>
        <label>Estimated Lifetime Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Applications_Details__c</fullName>
        <description>Expanded information regarding account&apos;s existing applications.</description>
        <inlineHelpText>Provide context and additional details for account&apos;s existing applications.</inlineHelpText>
        <label>Existing Applications Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Services_Details__c</fullName>
        <description>Expanded information regarding account&apos;s existing services (maintenance, education, professional services).</description>
        <inlineHelpText>Provide context and additional details for account&apos;s existing services (maintenance, education, professional services).</inlineHelpText>
        <label>Existing Services Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_My_Team__c</fullName>
        <formula>OR(
IF($User.Id = OwnerId,True,False),
IF($User.Id = Owner:User.ManagerId,True,False),
IF($User.Id = Owner:User.Manager.ManagerId,True,False),
IF($User.Id = Owner:User.Manager.Manager.ManagerId,True,False),
IF($User.Id = Owner:User.Manager.Manager.Manager.ManagerId,True,False), 
IF($User.Id = Owner:User.Manager.Manager.Manager.Manager.ManagerId,True,False) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MicroStrategy_Resource_Support_Needs__c</fullName>
        <description>Additional support and/or resources needed from MicroStrategy to support the goals of this account plan.</description>
        <inlineHelpText>What additional MicroStrategy support and/or resources are needed to achieve the goals of this account plan?</inlineHelpText>
        <label>MicroStrategy Resource Support Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives_For_This_Account__c</fullName>
        <description>Narrative of business objective for this account.</description>
        <inlineHelpText>What are your objectives/goals for this account?  Is this new business capture, or is this existing business defense?</inlineHelpText>
        <label>Objectives For This Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>SWOT Analysis opportunities.</description>
        <inlineHelpText>List elements that can be exploited to MicroStrategy&apos;s advantage with this account.</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Our_Experience_How__c</fullName>
        <inlineHelpText>Go to AP / BD 100 training materials and MK100 and Industry sections on Marketing Sharepoint to identify use case concepts and brainstorm ideas for this vertical, department or type of company.</inlineHelpText>
        <label>Use Cases</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Perception_of_MicroStrategy_Offerings__c</fullName>
        <description>What is the customer&apos;s perception of MicroStrategy and its offerings?</description>
        <inlineHelpText>What is the customer&apos;s perception of MicroStrategy and its offerings?</inlineHelpText>
        <label>Perception of MicroStrategy/Offerings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Offerings_and_Use_Cases__c</fullName>
        <description>Potential customer use cases aligned with MIcroStrategy solutions and offerings.</description>
        <inlineHelpText>Align potential customer use cases with proposed MicroStrategy offerings and upsell opportunities.</inlineHelpText>
        <label>Potential Offerings and Use Cases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Offerings__c</fullName>
        <description>For an existing customer or prospect account, what offering(s) is MicroStrategy proposing?</description>
        <inlineHelpText>For an existing customer or prospect account, what offering(s) is MicroStrategy proposing?</inlineHelpText>
        <label>Proposed Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Goal__c</fullName>
        <description>Revenue goal for this account plan.</description>
        <inlineHelpText>Enter total revenue goal for the objectives of this account plan within the stated time-line.</inlineHelpText>
        <label>Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <description>Associated risks of pursuing this account.</description>
        <inlineHelpText>List the potential risks of pursuing this account.</inlineHelpText>
        <label>Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>Strengths of SWOT Analysis.</description>
        <inlineHelpText>List the characteristics that provide an advantage and leverage into the account.</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Focus_Areas__c</fullName>
        <description>What area(s) of this account are targeted.  Which business unit/divisions/departments MicroStrategy is targeting, and why.</description>
        <inlineHelpText>Describe which business unit/divisions/departments you&apos;re targeting, and explain why.</inlineHelpText>
        <label>Target Focus Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>SWOT Analysis threats.</description>
        <inlineHelpText>List the elements that could undermine achieving the objectives for this account.</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>SWOT Analysis weaknesses.</description>
        <inlineHelpText>List the characteristics that pose hurdles and disadvantages for penetrating the account.</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Strategy__c</fullName>
        <description>What is the strategy to achieve the objective&apos;s for this account?</description>
        <inlineHelpText>What is the overall strategy for achieving the goals of this account?  Outline specific action items, next steps, and key participants.</inlineHelpText>
        <label>Win Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>